--- a/Prova prática/Prova prática/index.html
+++ b/Prova prática/Prova prática/index.html
@@ -28,7 +28,7 @@
                 <h1 class="apresentacao-titulo">Capcom</h1>
                 <p class="apresentacao-descricao">Capcom Co., Ltd. é uma desenvolvedora e publicadora japonesa de jogos eletrônicos sediada em Osaka. Ela é conhecida por ter criado franquias multimilionárias, tais como Resident Evil, Street Fighter, Mega Man, Devil May Cry, Dino Crisis e Onimusha. Sua sede principal está situada em Chuo-ku, Osaka.</p>
             </div>
-            <a href="" class="btn-cta">Conheça mais sobre nós!</a>
+            <a href="sobre.html" class="btn-cta">Conheça mais sobre nós!</a>
         </section>
         <div class="sede-descricao">
         <img src="/assets/Capcom_sede.jpg" alt="Sede da Capcom em Osaka" class="sede">
@@ -57,13 +57,14 @@
     </section>
 
     <footer class="rodape">
-        <p>©CAPCOM U.S.A., INC. ALL RIGHTS RESERVED. | <a href="#" class="links-termos">TERMS</a> | <a href="" class="links-termos">PRIVACY POLICY</a> | <a href="" class="links-termos">VIDEO POLICY</a> | <a href="" class="links-termos">COOKIE POLICY</a></p>
+        <p>©Developed by Mathias Dziurkowski | <a href="#" class="links-termos">TERMS</a> | <a href="" class="links-termos">PRIVACY POLICY</a> | <a href="" class="links-termos">VIDEO POLICY</a> | <a href="" class="links-termos">COOKIE POLICY</a></p>
         <div class="redes">
             <a href="https://www.facebook.com/capcomusa"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://twitter.com/capcomusa_"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.instagram.com/capcomusa/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.youtube.com/CapcomUSA"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://discord.com/invite/capcom"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://github.com/MathiasDziurkowski"><i class="fa-brands fa-github"></i></a>
 
 
         </div>
