--- a/Prova prática/Prova prática/sobre.html
+++ b/Prova prática/Prova prática/sobre.html
@@ -26,17 +26,19 @@
     <main class="principal-sobre">
         <h1 class="apresentacao-titulo-sobre">Sobre</h1>
         <p class="texto-sobre">A Capcom é uma das principais desenvolvedoras e publicadoras de jogos do planeta, responsáveis por títulos de sucesso em todo o mundo, que conseguiram se sobressair do universo gamer, e ganhar inclusive os cinemas. Os grandes destaques da produtora, neste caso, são Resident Evil, Street Fighter e Monster Hunter, que por si só já mostram a importância da empresa no mercado, uma vez que estão estão entre os principais títulos da história dos jogos.</p>
+        <p class="sobre-aviso"> <br> Este site foi feito exclusivamente para uma atividade avaliativa, apenas sou fã da empresa por ter desenvolvido a franquia Resident Evil. <br>Para mais informações do site, visite meu GitHub.</p>
         <img src="/assets/Capcom_logo.png" alt="" class="logo-sobre">
     
     </main>
     <footer class="rodape">
-        <p>©CAPCOM U.S.A., INC. ALL RIGHTS RESERVED. | <a href="#" class="links-termos">TERMS</a> | <a href="" class="links-termos">PRIVACY POLICY</a> | <a href="" class="links-termos">VIDEO POLICY</a> | <a href="" class="links-termos">COOKIE POLICY</a></p>
+        <p>©Developed by Mathias Dziurkowski | <a href="#" class="links-termos">TERMS</a> | <a href="" class="links-termos">PRIVACY POLICY</a> | <a href="" class="links-termos">VIDEO POLICY</a> | <a href="" class="links-termos">COOKIE POLICY</a></p>
             <div class="redes">
                 <a href="https://www.facebook.com/capcomusa"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://twitter.com/capcomusa_"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://www.instagram.com/capcomusa/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.youtube.com/CapcomUSA"><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://discord.com/invite/capcom"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://github.com/MathiasDziurkowski"><i class="fa-brands fa-github"></i></a>
             </div>
     </footer>
 </body>
