--- a/Prova prática/Prova prática/index.html
+++ b/Prova prática/Prova prática/index.html
@@ -32,7 +32,7 @@
         </section>
         <div class="sede-descricao">
         <img src="/assets/Capcom_sede.jpg" alt="Sede da Capcom em Osaka" class="sede">
-        <span>Sede da Capcom em Osaka, Japão</span>
+        <span class="span-descricao">Sede da Capcom em Osaka, Japão</span>
         </div>
     </main>
 
